--- a/Classwork/2019SP/Firebase I/index.html
+++ b/Classwork/2019SP/Firebase I/index.html
@@ -19,27 +19,37 @@
 
     <script>
       // INITIALIZE FIREBASE
-	    var config = {
-	      apiKey: "YOUR API KEY",
-	      authDomain: "YOUR PROJECT ID.firebaseapp.com",
-	      databaseURL: "https://YOUR PROJECT ID.firebaseio.com",
-	      projectId: "YOUR PROJECT ID",
-	      storageBucket: "YOUR PROJECT ID.appspot.com",
-	      messagingSenderId: "YOUR MESSAGINGSENDER ID"
-	    };
-      firebase.initializeApp(config);
+      var config = {
+    apiKey: "AIzaSyD_ZDmfG1U81qfBo-uedt5c2rK4Au_wWag",
+    authDomain: "mstu5013-d9804.firebaseapp.com",
+    databaseURL: "https://mstu5013-d9804.firebaseio.com",
+    projectId: "mstu5013-d9804",
+    storageBucket: "mstu5013-d9804.appspot.com",
+    messagingSenderId: "428799002806"
+  };
 
-      // INITIALIZE RIOT
-			riot.mount('app', {
-	      title: 'I want to behave!',
-	      items: [
-	        { title: 'Avoid excessive caffeine', done: true },
-	        { title: 'Hidden item',  hidden: true },
-	        { title: 'Be less provocative'  },
-	        { title: 'Be nice to people' }
-	      ]
-	    })
-    </script>
+  firebase.initializeApp(config);
+
+   let database = firebase.firestore();
+   let todoItems = []
+  database.collection("toDoItems").get().then(snapshot => {
+     snapshot.forEach(doc => {
+       let docData = doc.data();
+       todoItems.push(docData);
+     });
+  console.log(todoItems);
+    // INITIALIZE RIOT
+  riot.mount('app', {
+    title: 'I want to behave!',
+    items: todoItems
+
+
+    });
+
+
+
+	    });
+  </script>
 
   </body>
 </html>
